# claude-code-rag

./: .gitignore  CLAUDE_INSTALL.md  PLATFORM_NOTES.md  README.fr.md  README.md  ROADMAP.md  check_rag_health.sh  claude_rag.py  create_web_gif.py  install.ps1  install.sh  mcp_server.py  pyproject.toml  rag_tui.py  requirements.txt  session_parser.py  take_screenshots.py  web_ui.py  web_ui_backup.py
.claude/skills/auto-rag/: SKILL.md
.github/: dependabot.yml
.github/workflows/: lint.yml  publish.yml  release.yml  tests.yml
tests/: test_chunking.py
