[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-code-rag"
version = "0.9.4"
description = "Give Claude Code a persistent memory - Local semantic search powered by Ollama + ChromaDB"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "tarpediem" }
]
keywords = [
    "claude",
    "claude-code",
    "rag",
    "semantic-search",
    "ollama",
    "chromadb",
    "mcp",
    "memory",
    "ai",
    "llm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "chromadb>=0.4.0,<1.0.0",
    "requests>=2.31.0,<3.0.0",
    "textual>=0.40.0,<8.0.0",
    "mcp>=1.0.0,<2.0.0",
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn>=0.24.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/tarpediem/claude-code-rag"
Repository = "https://github.com/tarpediem/claude-code-rag"
Issues = "https://github.com/tarpediem/claude-code-rag/issues"

[project.scripts]
claude-rag = "claude_rag:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "tests/",
    ".github/",
    "*.md",
    ".venv/",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["claude_rag", "mcp_server", "session_parser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
